Fixing the navigation on small devices

--- a/css/custom.css
+++ b/css/custom.css
@@ -172,7 +172,9 @@ a:focus {
 }
 
 /* Change the nav button active colours etc. */
-.nav-pills > li > a.active, .nav-pills > li > a.active:hover, .nav-pills > li > a.active:focus {
+.nav-pills > li > a.active,
+.nav-pills > li > a.active:hover,
+.nav-pills > li > a.active:focus {
   background-color: #FFA500;
   color: #000000;
   font-family: arial, tahoma, sans-serif;
@@ -187,7 +189,8 @@ a:focus {
   text-decoration: none;
 }
 
-.nav-pills > li > a:hover, .nav-pills > li > a:focus {
+.nav-pills > li > a:hover,
+.nav-pills > li > a:focus {
   background-color: #FFFF66;
   color: #000000;
   text-decoration: none;
@@ -322,6 +325,13 @@ aside .glyphicon {
     border-radius: 0px;
     border-bottom: 1px solid #a5a5a5;
   }
+  
+  .nav-pills li a.active,
+  .nav-pills li a.active:hover,
+  .nav-pills li a.active:focus,
+  .nav-pills li a:hover {
+    background-color: #FFA500;
+  }
 
   .navbar-collapse.top-nav.collapse.in,
   .navbar-collapse.top-nav.collapsing
@@ -354,8 +364,6 @@ aside .glyphicon {
   .projects-page .jumbotron,
   .home-page .jumbotron {
   	position:relative;       
-        -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 30px rgba(0, 0, 0, 0.1) inset;
-        -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 30px rgba(0, 0, 0, 0.1) inset;
         box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 30px rgba(0, 0, 0, 0.1) inset;
   }
     
@@ -367,14 +375,11 @@ aside .glyphicon {
     content:"";
     position:absolute; 
     z-index:-1;
-    -webkit-box-shadow:0 0 15px rgba(0,0,0,0.8);
-    -moz-box-shadow:0 0 15px rgba(0,0,0,0.8);
     box-shadow:0 0 15px rgba(0,0,0,0.8);
     top:0;
     bottom:0;
     left:10px;
     right:10px;
-    -moz-border-radius:80px / 10px;
     border-radius:80px / 10px;
   }
 
